[package]
name = "rtic_hardware"
version = "0.1.0"
authors = ["TheZoq2 <frans.skarman@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stm32f1xx-hal = {version = "0.6.1", features = ["stm32f103", "rt", "medium"]}
esp-01 = "0.1.1"
embedded-hal = "0.2.3"
cortex-m-rtic = "0.5.3"
cortex-m-rtic-macros = "0.5.0"
cortex-m-semihosting = "0.3.5"
cortex-m-rt = "0.6.12"
cortex-m = "0.6.2"
panic-semihosting = "0.5.3"
nb = "0.1.2"
embedded-nrf24l01 = {path = "embedded-nrf24l01"}
common = {path = "../common"}
serde = {version = "1.0.114", default-features = false}
serde-json-core = {version = "0.1.0", default-features = false}
heapless = "0.5.5"
bmp085-driver = "0.1.4"
